syntax="proto3";

option java_multiple_files = true;
option java_package = "cn.atali.usercenter";
option java_outer_classname = "RoleProto";
option objc_class_prefix = "ROLESRV";
package usercenter;
option go_package = "./;usercenter";

import "common.proto";
import "menu.proto";

service Role{
    rpc Add(RoleInfo)returns(CommonResponse){}
    rpc Update(RoleInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryRoleRequest)returns(QueryRoleResponse){}
    rpc GetAll(GetAllRoleRequest)returns(GetAllRoleResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetRoleDetailResponse){}
    rpc StatisticCount(StatisticRoleCountRequest)returns(StatisticCountResponse){}
    rpc Export(CommonExportRequest)returns(CommonExportResponse){}
}

message StatisticRoleCountRequest{
    string tenantID=1;
}

message RoleInfo{
    string id=1;
    string tenantID=2;
    // @inject_tag: validate:"required"
    string name=3;
    string parentID=4;
    repeated RoleInfo children=5;
    repeated RoleMenu roleMenus=6;
    string defaultRouter=7;
    string description=8;
    bool canDel=9;
    string tenantName=10;
    bool public=11;
    string projectID=12;
    //系统必须要有的数据
    bool isMust=13;
}

message RoleMenu{
    string id=1;
    string roleID=2;
    string menuID=3;
    string funcs=4;
    MenuInfo menu=5;
    bool show=6;
}

message QueryRoleRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"orderField" form:"orderField"
    string orderField=3;
    // @inject_tag: uri:"desc" form:"desc"
    bool desc=4;
    // @inject_tag: uri:"name" form:"name"
    string name=5;
    //租户ID
    // @inject_tag: uri:"tenantID" form:"tenantID"
    string tenantID=6;
    // true-包含公共角色 false-不包含公共角色
    //公共角色定义：不设置租户的角色
    // @inject_tag: uri:"containerComm" form:"containerComm"
    bool containerComm=7;
    // @inject_tag: uri:"ids" form:"ids"
    repeated string ids=8;
    // @inject_tag: uri:"projectID" form:"projectID"
    string projectID=9;
    // @inject_tag: uri:"isMust" form:"isMust"
    bool isMust=10;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=11;
}

message QueryRoleResponse{
    Code code=1;
    string message=2;
    repeated RoleInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllRoleResponse{
    Code code=1;
    string message=2;
    repeated RoleInfo data=3;
}

message GetAllRoleRequest{
    // @inject_tag: uri:"tenantID" form:"tenantID"
    string tenantID=1;
    // true-包含公共角色 false-不包含公共角色
    //公共角色定义：不设置租户的角色
    // @inject_tag: uri:"containerComm" form:"containerComm"
    bool containerComm=2;
}

message GetRoleDetailResponse{
    Code code=1;
    string message=2;
    RoleInfo data=3;
}